// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps should render in vertical 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "direction": "vertical",
      "step": 2,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "desc": "this is the step 1",
          "key": 0,
          "title": "Step 1",
        },
        "children": Array [],
        "key": 0,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icons": Object {
            "finish": "notice",
            "pend": "search",
          },
          "key": 1,
          "status": "error",
          "title": "Step 2",
        },
        "children": Array [],
        "key": 1,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "desc": "now is the step 3",
          "icon": Object {
            "error": "search",
            "process": "notice",
          },
          "key": 2,
          "title": "Step 3",
        },
        "children": Array [],
        "key": 2,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "desc": "this is the step 4",
          "key": 3,
          "title": "Step 4",
        },
        "children": Array [],
        "key": 3,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 4,
          "title": "Step 5",
        },
        "children": Array [],
        "key": 4,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Steps should render properly 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "step": 1,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "desc": "this is the step 1",
          "key": 0,
          "title": "Step 1",
        },
        "children": Array [],
        "key": 0,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icons": Object {
            "finish": "notice",
            "pend": "search",
          },
          "key": 1,
          "status": "error",
          "title": "Step 2",
        },
        "children": Array [],
        "key": 1,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "desc": "now is the step 3",
          "icon": Object {
            "error": "search",
            "process": "notice",
          },
          "key": 2,
          "title": "Step 3",
        },
        "children": Array [],
        "key": 2,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "desc": "this is the step 4",
          "key": 3,
          "title": "Step 4",
        },
        "children": Array [],
        "key": 3,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 4,
          "title": "Step 5",
        },
        "children": Array [],
        "key": 4,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Steps should render with decimal ind 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "isDecimalInd": true,
      "step": 2,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "desc": "this is the step 1",
          "key": 0,
          "title": "Step 1",
        },
        "children": Array [],
        "key": 0,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "icons": Object {
            "finish": "notice",
            "pend": "search",
          },
          "key": 1,
          "status": "error",
          "title": "Step 2",
        },
        "children": Array [],
        "key": 1,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "desc": "now is the step 3",
          "icon": Object {
            "error": "search",
            "process": "notice",
          },
          "key": 2,
          "title": "Step 3",
        },
        "children": Array [],
        "key": 2,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "desc": "this is the step 4",
          "key": 3,
          "title": "Step 4",
        },
        "children": Array [],
        "key": 3,
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "key": 4,
          "title": "Step 5",
        },
        "children": Array [],
        "key": 4,
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
